--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 sHAM_package/sHAM/__pycache__/*
 experiments/performance_eval/VGG19/original_nets/*
 experiments/performance_eval/DeepDTA/original_nets/*
-experiments/performance_eval/DeepDTA/data_utils/*
+experiments/performance_eval/DeepDTA/data_utils/kiba
+experiments/performance_eval/DeepDTA/data_utils/davis
+
